# chatxz

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  build-android.sh  install-windows.cmd  install.bat  pyproject.toml  run.bat  run.cmd  run.ps1  run.sh  setup.py  uninstall.bat  uninstall.sh  version.properties
.github/workflows/: build-apk.yml
android/: build.gradle.kts
chatxz/: __init__.py  _version.py  app.py  portable.py  release_notes.py
ci/: build-apk.yml
docs/: VOICE.md
scripts/: bump-version.sh  check.sh  ensure-windows-deps.ps1  ensure_voice_native.py  gen-emoji-keywords.py  install-arch.sh  install-macos.sh  install-windows.ps1  launch-server.ps1  launch-server.sh  setup-serial-perms.sh  stop-chatxz.sh  sync-android.sh
tests/: test_audio_prefs.py  test_call_audio_engine.py  test_calls_v1.py  test_connect_wake.py  test_contact_dedup.py  test_contact_hash_sync.py  test_contact_names.py  test_cross_traffic.py  test_defaults_hub.py  test_discovery_identity.py  test_dual_identity.py  test_dual_transport_contacts.py  test_false_serial_discovery.py  test_hub_tcp_relay.py  test_inbound_link.py  test_lan_scope.py  test_linux_signals.py  test_opus_native.py  test_path_selection.py  test_peer_identity.py  test_peer_probe.py  test_platform_interfaces.py  test_probe_interval.py  test_received_dir.py  test_serial_announce_policy.py  test_serial_failover.py  test_serial_runtime.py  test_serial_transfer.py  test_shutdown_guard.py  test_startup.py  test_transport_isolation.py  test_transport_matrix.py  test_user_disconnect.py  test_voice_call.py
(+106 files in other folders)
