[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatxz"
version = "0.3.73"
description = "Decentralized chat over Reticulum Network Stack"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "rns>=1.3.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
chatxz = "chatxz.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatxz*"]

[tool.setuptools.package-data]
chatxz = ["web/static/*", "web/static/**/*"]
